fixed compatibility issue between keydown events  and click events  wraped main title in a h1 header  added styles to the h1 header

--- a/style.css
+++ b/style.css
@@ -13,10 +13,15 @@ body{
     padding: 10px;
     margin-top: 20px;
     text-align: center;
-    text-decoration:underline;
     font-weight: 600;
+    border: 3px solid lightcoral;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px; 
     
-    
+}
+
+h1{
+  margin: 0;
 }
 
 main{
